--- a/api/notebooks/titanic.ipynb
+++ b/api/notebooks/titanic.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "326d529f-789a-4a23-85c8-6c42bb416b55",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f89a31c9fd0>"
+       "<seaborn.axisgrid.PairGrid at 0x7f9bfa9838f0>"
       ]
      },
      "execution_count": 8,
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "b284dca4-637a-45e6-9163-37c90ccfaf3c",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1505,7 @@
        "['../assets/ml_models/titanic/titanic.pkl']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
