--- a/api/notebooks/titanic.ipynb
+++ b/api/notebooks/titanic.ipynb
@@ -24,6 +24,8 @@
    "outputs": [],
    "source": [
     "from catboost import CatBoostClassifier\n",
+    "import cloudpickle\n",
+    "import dill\n",
     "import joblib\n",
     "from lightgbm import LGBMClassifier\n",
     "import matplotlib.pyplot as plt\n",
@@ -363,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9bfa9838f0>"
+       "<seaborn.axisgrid.PairGrid at 0x7ff16abd5010>"
       ]
      },
      "execution_count": 8,
@@ -1498,20 +1500,10 @@
    "execution_count": 12,
    "id": "b284dca4-637a-45e6-9163-37c90ccfaf3c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../assets/ml_models/titanic/titanic.pkl']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "joblib.dump(final_pipeline, f'../assets/ml_models/titanic/{Config.IDENTIFIER}.pkl')"
+    "with open(f'../assets/ml_models/titanic/{Config.IDENTIFIER}.pkl', 'wb') as file:\n",
+    "    dill.dump(final_pipeline, file)"
    ]
   }
  ],
