Renaming + Accurate validation check

--- a/api/notebooks/titanic.ipynb
+++ b/api/notebooks/titanic.ipynb
@@ -54,7 +54,8 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -73,12 +74,12 @@
    "outputs": [],
    "source": [
     "class Config:\n",
-    "    DATASET_PATH = '../data/titanic.csv'\n",
-    "    LABEL_COLUMN = 'Survived'\n",
-    "    SPLIT_RATIO=0.25\n",
-    "    RANDOM_SEED=420\n",
-    "    NUMERIC_COL_DTYPES = ['int', 'float']\n",
-    "    IDENTIFIER = 'titanic'"
+    "    DATASET_PATH = \"../data/titanic.csv\"\n",
+    "    LABEL_COLUMN = \"Survived\"\n",
+    "    SPLIT_RATIO = 0.25\n",
+    "    RANDOM_SEED = 420\n",
+    "    NUMERIC_COL_DTYPES = [\"int\", \"float\"]\n",
+    "    IDENTIFIER = \"titanic\""
    ]
   },
   {
@@ -229,7 +230,9 @@
     "X = pd.read_csv(Config.DATASET_PATH)\n",
     "X, y = X.drop(columns=[Config.LABEL_COLUMN]), X[Config.LABEL_COLUMN]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=Config.SPLIT_RATIO, random_state=Config.RANDOM_SEED, stratify=y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=Config.SPLIT_RATIO, random_state=Config.RANDOM_SEED, stratify=y\n",
+    ")\n",
     "X_train.head()"
    ]
   },
@@ -311,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_to_drop = ['Cabin', 'Name', 'PassengerId', 'Ticket']\n",
+    "cols_to_drop = [\"Cabin\", \"Name\", \"PassengerId\", \"Ticket\"]\n",
     "cols_to_keep = [col for col in list(X_train.columns) if col not in cols_to_drop]\n",
     "\n",
     "numeric_cols = X_train.select_dtypes(include=Config.NUMERIC_COL_DTYPES).columns\n",
@@ -338,14 +341,18 @@
    "source": [
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', SimpleImputer(strategy='median'), numeric_cols),\n",
-    "        ('cat', SimpleImputer(strategy='most_frequent'), non_numeric_cols),\n",
+    "        (\"num\", SimpleImputer(strategy=\"median\"), numeric_cols),\n",
+    "        (\"cat\", SimpleImputer(strategy=\"most_frequent\"), non_numeric_cols),\n",
     "    ],\n",
-    "    remainder='drop'\n",
+    "    remainder=\"drop\",\n",
     ")\n",
     "\n",
     "preprocessor.fit(X_train)\n",
-    "X_train = pd.DataFrame(preprocessor.transform(X_train), columns=numeric_cols+non_numeric_cols, index=X_train.index)"
+    "X_train = pd.DataFrame(\n",
+    "    preprocessor.transform(X_train),\n",
+    "    columns=numeric_cols + non_numeric_cols,\n",
+    "    index=X_train.index,\n",
+    ")"
    ]
   },
   {
@@ -384,7 +391,7 @@
     }
    ],
    "source": [
-    "g = sns.PairGrid(pd.concat([X_train, y_train], axis=1), hue='Survived')\n",
+    "g = sns.PairGrid(pd.concat([X_train, y_train], axis=1), hue=\"Survived\")\n",
     "g.map_diag(sns.histplot)\n",
     "g.map_offdiag(sns.scatterplot)"
    ]
@@ -878,28 +885,31 @@
     "class RemoveStringColumnsTransformer(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, X, y=None):\n",
     "        return self\n",
-    "    \n",
+    "\n",
     "    def transform(self, X):\n",
-    "        numeric_columns_mask = np.array([np.issubdtype(type(val), np.number) for val in X[0]])\n",
+    "        numeric_columns_mask = np.array(\n",
+    "            [np.issubdtype(type(val), np.number) for val in X[0]]\n",
+    "        )\n",
     "        numeric_data = X[:, numeric_columns_mask]\n",
-    "        \n",
+    "\n",
     "        return numeric_data\n",
+    "\n",
     "\n",
     "final_preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', SimpleImputer(strategy='median'), numeric_cols),\n",
-    "        ('cat', SimpleImputer(strategy='most_frequent'), non_numeric_cols),\n",
-    "        ('ord', OrdinalEncoder(categories=[['male', 'female']]), ['Sex']),\n",
-    "        ('ohe', OneHotEncoder(), ['Embarked']),\n",
+    "        (\"num\", SimpleImputer(strategy=\"median\"), numeric_cols),\n",
+    "        (\"cat\", SimpleImputer(strategy=\"most_frequent\"), non_numeric_cols),\n",
+    "        (\"ord\", OrdinalEncoder(categories=[[\"male\", \"female\"]]), [\"Sex\"]),\n",
+    "        (\"ohe\", OneHotEncoder(), [\"Embarked\"]),\n",
     "    ],\n",
-    "    remainder='drop'\n",
+    "    remainder=\"drop\",\n",
     ")\n",
     "\n",
     "preprocessor_pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        ('col', final_preprocessor),\n",
-    "        ('sct', RemoveStringColumnsTransformer()),\n",
-    "        ('std', StandardScaler())\n",
+    "        (\"col\", final_preprocessor),\n",
+    "        (\"sct\", RemoveStringColumnsTransformer()),\n",
+    "        (\"std\", StandardScaler()),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -1431,21 +1441,44 @@
     }
    ],
    "source": [
-    "\n",
     "models_search = [\n",
-    "    ('knn', KNeighborsClassifier(), {'n_neighbors': [2, 3, 5, 7, 11], 'p': [1, 2, 3, 4]}),\n",
-    "    ('xgb', XGBClassifier(objective='binary:logistic'), {\n",
-    "        'max_depth': range(2, 10, 1), 'n_estimators': range(60, 220, 40), 'learning_rate': [0.1, 0.01, 0.05, 0.03]\n",
-    "    }),\n",
-    "    ('cat', CatBoostClassifier(silent=True), {'learning_rate': [0.01, 0.05, 0.1], 'depth': [4, 6, 8, 10], 'n_estimators': [50, 100, 200]}),\n",
-    "    ('lgb', LGBMClassifier(verbose=-1), {\n",
-    "        'learning_rate': [0.1, 0.03, 0.05, 0.3], 'num_leaves': [-1, 50, 100, 200], 'n_estimators': [50, 100, 200]\n",
-    "    }),\n",
+    "    (\n",
+    "        \"knn\",\n",
+    "        KNeighborsClassifier(),\n",
+    "        {\"n_neighbors\": [2, 3, 5, 7, 11], \"p\": [1, 2, 3, 4]},\n",
+    "    ),\n",
+    "    (\n",
+    "        \"xgb\",\n",
+    "        XGBClassifier(objective=\"binary:logistic\"),\n",
+    "        {\n",
+    "            \"max_depth\": range(2, 10, 1),\n",
+    "            \"n_estimators\": range(60, 220, 40),\n",
+    "            \"learning_rate\": [0.1, 0.01, 0.05, 0.03],\n",
+    "        },\n",
+    "    ),\n",
+    "    (\n",
+    "        \"cat\",\n",
+    "        CatBoostClassifier(silent=True),\n",
+    "        {\n",
+    "            \"learning_rate\": [0.01, 0.05, 0.1],\n",
+    "            \"depth\": [4, 6, 8, 10],\n",
+    "            \"n_estimators\": [50, 100, 200],\n",
+    "        },\n",
+    "    ),\n",
+    "    (\n",
+    "        \"lgb\",\n",
+    "        LGBMClassifier(verbose=-1),\n",
+    "        {\n",
+    "            \"learning_rate\": [0.1, 0.03, 0.05, 0.3],\n",
+    "            \"num_leaves\": [-1, 50, 100, 200],\n",
+    "            \"n_estimators\": [50, 100, 200],\n",
+    "        },\n",
+    "    ),\n",
     "]\n",
     "\n",
     "# The best one was lgb with params: {'learning_rate': 0.1, 'n_estimators': 50, 'num_leaves': 50 }\n",
     "\n",
-    "'''\n",
+    "\"\"\"\n",
     "for model_name, model, params in models_search:\n",
     "    pipeline = Pipeline(\n",
     "        steps=[\n",
@@ -1455,12 +1488,17 @@
     "    )\n",
     "    pipeline.fit(X_train, y_train)\n",
     "    clf_predictions = pipeline.predict(X_test)\n",
-    "'''\n",
+    "\"\"\"\n",
     "\n",
     "final_pipeline = Pipeline(\n",
     "    steps=[\n",
-    "        ('col', preprocessor_pipeline),\n",
-    "        ('clf', LGBMClassifier(verbose=-1, learning_rate=0.1, num_leaves=50, n_estimators=50))\n",
+    "        (\"col\", preprocessor_pipeline),\n",
+    "        (\n",
+    "            \"clf\",\n",
+    "            LGBMClassifier(\n",
+    "                verbose=-1, learning_rate=0.1, num_leaves=50, n_estimators=50\n",
+    "            ),\n",
+    "        ),\n",
     "    ]\n",
     ")\n",
     "final_pipeline.fit(X_train, y_train)"
@@ -1502,7 +1540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'../assets/ml_models/titanic/{Config.IDENTIFIER}.pkl', 'wb') as file:\n",
+    "with open(f\"../assets/ml_models/titanic/{Config.IDENTIFIER}.pkl\", \"wb\") as file:\n",
     "    dill.dump(final_pipeline, file)"
    ]
   }
