More admin dashboard thingies

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -226,6 +226,9 @@ en:
         parameter_type: Parameter Type
         description: Description
         ml_model: ML Model
+    subreddits:
+      index:
+        add_subreddit: Add A New Subreddit
     users:
       index:
         add_user: Add New User
